# Matlab-Engine-CMake-Test

./: CMakeLists.txt  README.md
cmake/: FindMatlab.cmake
src/: CMakeLists.txt  matlab_engine.cpp
